[package]
name = "sail"
version = "0.1.0"
authors = ["Brad Alfirevic <brad@genbyte.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.3" # Parsing
pest_derive = "2.1.0"
smol = "1.2.5" # Asynchronous crate