[package]
name = "sail"
version = "0.1.0"
license = "ISC"
authors = ["Genny Alfirevic <gen@nyble.dev>", "Devon Sawatsky <novedevo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1" # Parsing
pest_derive = "2.1"
tokio = { version = "1", features = ["full"] }
trust-dns-resolver = "0.20"
thiserror = "1.0"

[dependencies.time]
version = "0.3.13"
features = ["formatting", "local-offset"]