[package]
name = "sail"
version = "0.1.0"
license = "ISC"
authors = ["Genny Z <gen@nyble.dev>", "Devon Sawatsky <novedevo@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.5"
pest_derive = "2.5"
tokio = { version = "1.33", features = ["full"] }
hickory-resolver = "0.24.0"
thiserror = "1.0"
time = { version = "0.3.19", features = ["formatting", "local-offset"] }
