[package]
name = "sail"
version = "0.1.0"
license = "ISC"
authors = ["gennyble <gen@nyble.dev>", "Devon Sawatsky <novedevo@gmail.com>"]
edition = "2021"
rust-version = "1.82"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.5"
pest_derive = "2.5"
tokio = { version = "1.33", features = ["full"] }
hickory-resolver = "0.25.2"
thiserror = "2.0.17"
time = { version = "0.3.19", features = ["formatting", "local-offset"] }
