[package]
name = "saild"
version = "0.1.0"
license = "ISC"
authors = ["Genny Z <gen@nyble.dev>", "Devon Sawatsky <novedevo@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sail = { path = "../sail" }
gethostname = "0.4"
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }
getopts = "0.2.21"
confindent = "2.2.0"
thiserror = "1.0"