[package]
name = "saild"
version = "0.1.0"
license = "ISC"
authors = ["gennyble <gen@nyble.dev>", "Devon Sawatsky <novedevo@gmail.com>"]
edition = "2021"
rust-version = "1.82"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sail = { path = "../sail" }
gethostname = "1.1.0"
rand = "0.9.2"
tokio = { version = "1.33", features = ["full"] }
getopts = "0.2.21"
confindent = "2.2"
thiserror = "2.0.17"
